--- a/src/app/modules/accept-request/accept-request.component.html
+++ b/src/app/modules/accept-request/accept-request.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="!success">
 <div>
   <app-author-nav></app-author-nav>
 
@@ -18,7 +19,7 @@
                     [ngClass]="{'selected': selectedButton === 'button4'}">Messaged</button> -->
       </div>
     </div>
-   
+  
     <div *ngIf="GoNext === 'button1'">
       <div class="container " style="margin-top: 50px;" *ngIf="Applies && Applies.length > 0">
         <div class="row deta" *ngFor="let Apply of Applies;let i = index">
@@ -65,6 +66,7 @@
       </div>
     </div>
     </div>
+    </div>
 
     </div>
 
@@ -76,7 +78,7 @@
           <div class="col-1">
             <!-- <div class="elli"> -->
               <div class="kkprimg" *ngIf="Apply.applideUserProfile">
-                <img src="{{imageUrl + Apply.applideUserProfile }}" class=" kkprimg img-responsive">
+                <img src="{{Apply.applideUserProfile }}" class=" kkprimg img-responsive">
             </div>
             <div class="kkprimg" *ngIf="!Apply.applideUserProfile">
                 <img src="../assets/Frame 82.png" class="rounded-circle kkprimg img-responsive">
@@ -93,7 +95,8 @@
           <div class="col-2"></div>
           <div class="col-3">
             <p class="bid">Bidding rate : <span class="rate">${{Apply.biddingRate}}/ hour</span></p>
-            <button class="msg">Message</button><button class="hire" data-bs-toggle="modal" data-bs-target="#hireModal"
+            <!-- <button class="msg">Message</button> -->
+            <button class="hire" data-bs-toggle="modal" data-bs-target="#hireModal"
               (click)="ApplyModal(Apply)">Hire</button>
             <p class="cov" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="openModal(Apply)">View
               Cover Letter <img src="../assets/Vector 26.png" alt="Welcome Pubkin"> </p>
@@ -101,7 +104,7 @@
           <div class="col-1">
             <div class="col-1">
               <img class="sho1" (click)="showicon(i)" src="../assets/show more.png" alt="">
-              <div class="EDITDEL"  *ngIf="showicons[i]">
+              <div class="EDITDEL1"  *ngIf="showicons[i]">
 
                 <!-- <img class="p-2" src="./assets/shortlist.png" data-bs-toggle="modal" data-bs-target="#deletmodel2"> -->
                 <img class="p-2" src="./assets/deleteico.png" data-bs-toggle="modal" data-bs-target="#deletmodel1">
@@ -232,7 +235,15 @@
       </div>
     </div>
 
-
+    <div class="all-success" *ngIf="success">
+      <div class="successmsg">
+          <p class="successhead">Success! Your Offer Sent</p>
+          <img class="whopee" src="../assets/Success.gif" alt="Success">
+          <p class="redirecte">Redirecting now...</p>
+          <img class="successtick" src="../assets/Lottie gif.gif" alt="Pubkin-success">
+      </div>
+  </div>
+  
     <!--Hire and Pay -->
     <div class="modal fade " id="hireModal" tabindex="-1" aria-labelledby="hireModalLabel" aria-hidden="true">
       <div class="modal-dialog dia12">
@@ -247,7 +258,7 @@
             </button>
           </div>
 
-
+   
           <div class="modal-body" *ngIf="selectedhire">
             <div class="container">
               <div class="row">
@@ -296,7 +307,7 @@
                     <input type="hidden" id="id" name="id" [(ngModel)]="Applies[0].id">
                     <input type="hidden" id="status" name="status" [(ngModel)]="Applies[0].status">
                     <button class="cpay" type="submit" data-bs-toggle="modal" data-bs-target="#saveModal"
-                      (click)="ChangeStatus();" >Confirm & Pay</button>
+                      (click)="ChangeStatus();successmsg();" >Confirm & Pay</button>
                   </form>
                   <p class="disclaimer">*This payment will be add on your wallet</p>
                 </div>
@@ -306,7 +317,7 @@
         </div>
       </div>
     </div>
-
+<!-- 
 
     <div class="modal  fade" id="saveModal" tabindex="-1" aria-labelledby="saveModalLabel" aria-hidden="true">
       <div class="modal-dialog ">
@@ -343,7 +354,7 @@
           <button class="btn kkbillbtnlst">Confirm Payment Method</button>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
     <div class="modal  fade" id="paymentModal" tabindex="-1" aria-labelledby="paymentModalLabel" aria-hidden="true">
