--- a/src/app/modules/apply-now/apply-now.component.scss
+++ b/src/app/modules/apply-now/apply-now.component.scss
@@ -399,7 +399,7 @@ line-height: 28.5px; /* 150% */
     }
     
     .covcont{ 
-        width: 95%;
+        width: 99%;
         height: 240px;
         flex-shrink: 0;
         border-radius: 12px;
@@ -421,7 +421,7 @@ line-height: 28.5px; /* 150% */
         float: right;
         font-weight: 500;
         line-height: 41px;
-        margin-right: -30px;
+        margin-right: -90px;
     }
     
     .up { 
@@ -700,7 +700,31 @@ color: #FFF;
 
 
 }
-
+input[type=text]:focus {
+    outline: none;  
+    border-color:#A426D1;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(208, 0, 255, 0.6);
+    }
+    input[type=email]:focus {
+        outline: none;  
+        border-color:#A426D1;
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(208, 0, 255, 0.6);
+        }
+        input[type=password]:focus {
+            outline: none;  
+            border-color:#A426D1;
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(208, 0, 255, 0.6);
+            }
+    textarea:focus {
+    outline: none;  
+    border-color:#A426D1;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(208, 0, 255, 0.6);
+    }
+    select:focus {
+    outline: none;  
+    border-color:#A426D1;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(208, 0, 255, 0.6);
+    }
 .check123 { 
     --mdc-checkbox-selected-checkmark-color: white;
     --mdc-checkbox-selected-focus-icon-color: blueviolet;
