--- a/src/app/modules/job-details/job-details.component.html
+++ b/src/app/modules/job-details/job-details.component.html
@@ -58,8 +58,7 @@
                   <span *ngIf="jobPost.currency === 'AOA'" >Kz</span>
                   <span *ngIf="jobPost.currency === 'ARS  '" >$</span>
                   <span *ngIf="jobPost.currency === 'OMR'" >ر.ع.</span>
-                  <span *ngIf="jobPost.currency === 'SAR'" >.س</span> {{jobPost.fromBudget}}-{{jobPost.toBudget}}
-                  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/{{jobPost.rateBasis}}</p>
+                  <span *ngIf="jobPost.currency === 'SAR'" >.س</span> {{jobPost.fromBudget}}-{{jobPost.toBudget}} / {{jobPost.rateBasis}}</p>
               </div>
             </div>
           </div>
