--- a/src/app/modules/signup/googlelogin/googlelogin.component.scss
+++ b/src/app/modules/signup/googlelogin/googlelogin.component.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     font-family: "League Spartan",sans-serif;
     font-size: 20px;
+    font-weight: 500;
     align-items: center;
     border-radius: 8px;
     border: 2px solid #A426D1;
