--- a/src/app/modules/signup/googlesignin/googlesignin.component.scss
+++ b/src/app/modules/signup/googlesignin/googlesignin.component.scss
@@ -7,6 +7,7 @@
     font-family: "League Spartan",sans-serif;
     font-size: 20px;
     margin-top: 94px;
+    font-weight: 500;
     border-radius: 8px;
     border: 2px solid #A426D1;
     background: rgba(255, 255, 255, 0.10);
